Fix request body parsing issues

--- a/PartsHoleAPI/PartsHoleAPI.csproj
+++ b/PartsHoleAPI/PartsHoleAPI.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PartsHoleModelLibrary\PartsHoleModelLibrary.csproj" />
+    <ProjectReference Include="..\PartsHoleRestLibrary\PartsHoleRestLibrary.csproj" />
   </ItemGroup>
 
 </Project>
