--- a/PartsHoleAPI/appsettings.json
+++ b/PartsHoleAPI/appsettings.json
@@ -5,14 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DatabaseSettings": {
-    "ConnectionString": "mongodb+srv://<username>:<password>@partsinventorydev.ljk92th.mongodb.net/?retryWrites=true&w=majority",
+  "Database": {
     "DatabaseName": "Inventory",
-    "BinCollection": "Bins",
-    "DatasheetCollection": "Datasheets",
-    "InvoiceCollection": "Invoices",
-    "PartCollection": "Parts",
-    "UserCollection": "Users"
+    "BinsCollection": "Bins",
+    "InvoicesCollection": "Invoices",
+    "PartsCollection": "Parts",
+    "UsersCollection": "Users"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "test.com;localhost"
 }
