Add part number service model and new part number creation (WIP)

--- a/PartsHoleAPI/appsettings.json
+++ b/PartsHoleAPI/appsettings.json
@@ -1,16 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "Database": {
-    "DatabaseName": "Inventory",
-    "BinsCollection": "Bins",
-    "InvoicesCollection": "Invoices",
-    "PartsCollection": "Parts",
-    "UsersCollection": "Users"
-  },
-  "AllowedHosts": "test.com;localhost"
+   "Logging": {
+      "LogLevel": {
+         "Default": "Information",
+         "Microsoft.AspNetCore": "Warning"
+      }
+   },
+   "Database": {
+      "DatabaseName": "Inventory",
+      "BinsCollection": "Bins",
+      "InvoicesCollection": "Invoices",
+      "PartsCollection": "Parts",
+      "UsersCollection": "Users",
+      "PartNumberCollection": "PartNumbers"
+   },
+   "AllowedHosts": "test.com;localhost"
 }
