--- a/PartsHoleAPI/PartsHoleAPI.csproj
+++ b/PartsHoleAPI/PartsHoleAPI.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CSVParserLibrary" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
@@ -17,7 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Libraries\CSVParserLibrary\CSVParserLibrary\CSVParserLibrary.csproj" />
     <ProjectReference Include="..\PartsHoleModelLibrary\PartsHoleModelLibrary.csproj" />
     <ProjectReference Include="..\PartsHoleRestLibrary\PartsHoleRestLibrary.csproj" />
   </ItemGroup>
