Add part number endpoint methods and fix bugs

--- a/PartsHoleRestLibrary/PartsHoleRestLibrary.csproj
+++ b/PartsHoleRestLibrary/PartsHoleRestLibrary.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PartsHoleModelLibrary\PartsHoleModelLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
