--- a/PartsHoleModelLibrary/PartsHoleModelLibrary.csproj
+++ b/PartsHoleModelLibrary/PartsHoleModelLibrary.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\CSharpLibraries\ExcelParserLibrary\ExcelParserLibrary\ExcelParserLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
