--- a/PartsHoleRestLibrary/PartsHoleRestLibrary.csproj
+++ b/PartsHoleRestLibrary/PartsHoleRestLibrary.csproj
@@ -10,4 +10,8 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
 </Project>
